[package]
name = "sorting"
version = "0.1.0"
authors = ["johannes"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine_renderer = {git = "https://github.com/romptroll/engine_renderer", branch = "main"}
engine_core = {git = "https://github.com/romptroll/engine_core"}
engine_gui = {git = "https://github.com/romptroll/engine_gui"}
rand = "*"